--- a/twitter-api/streaming-api.ipynb
+++ b/twitter-api/streaming-api.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -74,6 +74,7 @@
     "import tweepy\n",
     "#override tweepy.StreamListener to add logic to on_status\n",
     "class MyStreamListener(tweepy.StreamListener):\n",
+    "    \n",
     "    def on_status(self, status):\n",
     "        print(status.text)\n",
     "        \n",
@@ -85,14 +86,14 @@
     "        \n",
     "myStreamListener = MyStreamListener()\n",
     "myStream = tweepy.Stream(auth = api.auth, listener=myStreamListener)\n",
-    "myStream.filter(track=['trump', \"hilton\"], async=True)"
+    "myStream.filter(track=['trump', \"hilton\"], async=True)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -131,7 +132,17 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "for error_counter in range(20):\n",
+    "    try:     \n",
+    "        myStream.filter(track=['trump', \"hilton\"], async=True)\n",
+    "        print(\"Tweets collected: {}\".format(myStream.listener.counter))\n",
+    "        break\n",
+    "    except:\n",
+    "        print(\"error {}\".format(error_counter + 1))\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
